--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ Flask==3.0.0
 Flask-Cors==4.0.0
 torch==2.2.0
 torchvision==0.17.0
-transformers==4.38.0
+transformers==4.38.2
 Pillow==10.2.0
 jiwer==3.0.3
 requests==2.31.0
 scikit-learn==1.4.0
-accelerate==0.27.0
+accelerate==0.28.0
 evaluate==0.4.1
 datasets==2.17.0
+peft==0.10.0
